# thamatekai

./: pyproject.toml  requirements.txt  ruff.toml
src/: main.py
src/assets/: styles.css
src/components/: __init__.py  chat_box.py  header.py  sidebar.py
src/pages/: ask_pdf.py  chatbot.py
src/utils/: ai_llm_langchain.py  ai_prompts.py  ai_tools.py  helper.py  image.py
