[project]
name = "chatai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dash-extensions>=1.0.19",
    "dash>=2.18.2",
    "pypdf2>=3.0.1",
    "ollama>=0.4.2",
    "langchain>=0.3.10",
    "langchain-ollama>=0.2.1",
    "langchain-core>=0.3.22",
    "langchain-community>=0.3.10",
    "serpapi>=0.1.5",
    "google-search-results>=2.4.2",
    "dash-bootstrap-components>=1.6.0",
]

[dependency-groups]
dev = [
    "pip>=24.3.1",
    "pre-commit>=4.0.1",
    "ruff>=0.8.2",
]
